--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,7 @@
 
 		<h4>Projects</h4>
 		{{#if viewAlt}}
-			Min! <button class='likeBtn'>Like</button>
+			min! <button class='likeBtn'>Like</button>
 
 		{{else}}
 
